--- a/app/css/app-rtl.css
+++ b/app/css/app-rtl.css
@@ -4,11 +4,11 @@
 
 /*!
  * 
- * Angle - Bootstrap Admin App + AngularJS
+ * Sussurus - Bootstrap Admin App + AngularJS
  * 
- * Author: @themicon_co
- * Website: http://themicon.co
- * License: http://support.wrapbootstrap.com/knowledge_base/topics/usage-licenses
+ * Author: Sawss
+ * Website: http://themeforest.net/user/Sawss
+ * 
  * 
  */
 
