--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,11 +2,11 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,400italic);
 /*!
  * 
- * Angle - Bootstrap Admin App + AngularJS
+ * Sussurus - Bootstrap Admin App + AngularJS
  * 
- * Author: @themicon_co
- * Website: http://themicon.co
- * License: http://support.wrapbootstrap.com/knowledge_base/topics/usage-licenses
+ * Author: Sawss
+ * Website: http://themeforest.net/user/Sawss
+ * 
  * 
  */
 /* ========================================================================
