--- a/master/less/app.less
+++ b/master/less/app.less
@@ -1,10 +1,10 @@
 /*!
  * 
- * Angle - Bootstrap Admin App + AngularJS
+ * Sussurus - Bootstrap Admin App + AngularJS
  * 
- * Author: @themicon_co
- * Website: http://themicon.co
- * License: http://support.wrapbootstrap.com/knowledge_base/topics/usage-licenses
+ * Author: @Sawss
+ * Website: http://themeforest.net/user/Sawss
+ * 
  * 
  */
 
