--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6226,9 +6226,9 @@ body {
 }
 .topnavbar .navbar-header {
   background-color: transparent;
-  background-image: -webkit-linear-gradient(left, #23b7e5 0%, #51c6ea 100%);
-  background-image: -o-linear-gradient(left, #23b7e5 0%, #51c6ea 100%);
-  background-image: linear-gradient(to right, #23b7e5 0%, #51c6ea 100%);
+  background-image: -webkit-linear-gradient(left, #5677fc 0%, #6889ff 100%);
+  background-image: -o-linear-gradient(left, #5677fc 0%, #6889ff 100%);
+  background-image: linear-gradient(to right, #5677fc 0%, #6889ff 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff23b7e5', endColorstr='#ff51c6ea', GradientType=1);
 }
@@ -6304,7 +6304,7 @@ body {
 }
 .nav-wrapper {
   padding: 0 15px;
-  background-color: transparent;
+  background-color: #5677fc;
 }
 .nav-wrapper .nav.navbar-nav {
   float: left;
@@ -6404,7 +6404,7 @@ body {
   .topnavbar .navbar-nav > .open > a:hover,
   .topnavbar .navbar-nav > li > a:focus,
   .topnavbar .navbar-nav > .open > a:focus {
-    color: #117391;
+    color: #B0BAE2;
   }
   .topnavbar .navbar-nav > li > [data-toggle='navbar-search'] {
     position: static;
@@ -6508,7 +6508,7 @@ body {
 .sidebar > .nav > li > .nav-item:hover {
   text-decoration: none;
   outline: none;
-  color: #23b7e5;
+  color: #5677fc;
 }
 .sidebar > .nav > li > a > em,
 .sidebar > .nav > li > .nav-item > em {
@@ -6527,11 +6527,11 @@ body {
 .sidebar > .nav > li.active .nav,
 .sidebar > .nav > li.open .nav {
   background-color: #fcfcfc;
-  color: #23b7e5;
+  color: #5677fc;
 }
 .sidebar > .nav > li.active > a > em,
 .sidebar > .nav > li.open > a > em {
-  color: #23b7e5;
+  color: #5677fc;
 }
 .sidebar > .nav > li.active {
   border-left-color: initial;
@@ -6566,16 +6566,16 @@ body {
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #23b7e5;
+  color: #5677fc;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #23b7e5;
+  color: #5677fc;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #23b7e5;
-  background-color: #23b7e5;
+  border-color: #5677fc;
+  background-color: #5677fc;
 }
 .sidebar-subnav.nav-floating {
   border: 1px solid rgba(0, 0, 0, 0.15);
