--- a/app/css/theme-f.css
+++ b/app/css/theme-f.css
@@ -12,12 +12,9 @@ body,
   background-color: #fff;
 }
 .topnavbar .navbar-header {
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-  background-image: -o-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-  background-image: linear-gradient(to right, #2b957a 0%, #37bc9b 100%);
+  background-color: #009688;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2b957a', endColorstr='#ff37bc9b', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff37bc9b', endColorstr='#ff58ceb1', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar .navbar-header {
@@ -26,13 +23,13 @@ body,
 }
 .topnavbar .navbar-nav > li > a,
 .topnavbar .navbar-nav > .open > a {
-  color: #2b957a;
+  color: #009688;
 }
 .topnavbar .navbar-nav > li > a:hover,
 .topnavbar .navbar-nav > .open > a:hover,
 .topnavbar .navbar-nav > li > a:focus,
 .topnavbar .navbar-nav > .open > a:focus {
-  color: #144639;
+  color: #40c4ff;
 }
 .topnavbar .navbar-nav > .active > a,
 .topnavbar .navbar-nav > .open > a,
@@ -46,21 +43,15 @@ body,
   color: #ffffff;
 }
 .topnavbar .nav-wrapper {
-  background-color: #2b957a;
-  background-image: -webkit-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-  background-image: -o-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-  background-image: linear-gradient(to right, #2b957a 0%, #37bc9b 100%);
+  background-color: #009688;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2b957a', endColorstr='#ff37bc9b', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff37bc9b', endColorstr='#ff58ceb1', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar {
-    background-color: #2b957a;
-    background-image: -webkit-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-    background-image: -o-linear-gradient(left, #2b957a 0%, #37bc9b 100%);
-    background-image: linear-gradient(to right, #2b957a 0%, #37bc9b 100%);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2b957a', endColorstr='#ff37bc9b', GradientType=1);
+  background-color: #009688;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff37bc9b', endColorstr='#ff58ceb1', GradientType=1);
   }
   .topnavbar .navbar-nav > .open > a,
   .topnavbar .navbar-nav > .open > a:hover,
@@ -75,7 +66,7 @@ body,
   .topnavbar .navbar-nav > .open > a:hover,
   .topnavbar .navbar-nav > li > a:focus,
   .topnavbar .navbar-nav > .open > a:focus {
-    color: #144639;
+    color: #40c4ff;
   }
 }
 /* ========================================================================
@@ -95,7 +86,7 @@ body,
 .sidebar .nav > li > .nav-item:focus,
 .sidebar .nav > li > a:hover,
 .sidebar .nav > li > .nav-item:hover {
-  color: #2b957a;
+  color: #009688;
 }
 .sidebar .nav > li > a > em,
 .sidebar .nav > li > .nav-item > em {
@@ -107,12 +98,12 @@ body,
 .sidebar .nav > li.open > a,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
-  background-color: #383d4e;
-  color: #2b957a;
+  background-color: #2F3444;
+  color: #009688;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #2b957a;
+  color: #009688;
 }
 .sidebar-subnav {
   background-color: #3a3f51;
@@ -128,16 +119,16 @@ body,
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #2b957a;
+  color: #009688;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #2b957a;
+  color: #009688;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #2b957a;
-  background-color: #2b957a;
+  border-color: #009688;
+  background-color: #009688;
 }
 /* ========================================================================
    Component: offsidebar
