--- a/app/css/theme-g.css
+++ b/app/css/theme-g.css
@@ -12,12 +12,12 @@ body,
   background-color: #fff;
 }
 .topnavbar .navbar-header {
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-  background-image: -o-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-  background-image: linear-gradient(to right, #564aa3 0%, #7266ba 100%);
+  background-color: #7266ba;
+  background-image: -webkit-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: -o-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: linear-gradient(to right, #7266ba 0%, #9289ca 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff564aa3', endColorstr='#ff7266ba', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar .navbar-header {
@@ -46,21 +46,21 @@ body,
   color: #ffffff;
 }
 .topnavbar .nav-wrapper {
-  background-color: #564aa3;
-  background-image: -webkit-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-  background-image: -o-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-  background-image: linear-gradient(to right, #564aa3 0%, #7266ba 100%);
+  background-color: #7266ba;
+  background-image: -webkit-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: -o-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: linear-gradient(to right, #7266ba 0%, #9289ca 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff564aa3', endColorstr='#ff7266ba', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar {
-    background-color: #564aa3;
-    background-image: -webkit-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-    background-image: -o-linear-gradient(left, #564aa3 0%, #7266ba 100%);
-    background-image: linear-gradient(to right, #564aa3 0%, #7266ba 100%);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff564aa3', endColorstr='#ff7266ba', GradientType=1);
+    background-color: #7266ba;
+  background-image: -webkit-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: -o-linear-gradient(left, #7266ba 0%, #9289ca 100%);
+  background-image: linear-gradient(to right, #7266ba 0%, #9289ca 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7266ba', endColorstr='#ff9289ca', GradientType=1);
   }
   .topnavbar .navbar-nav > .open > a,
   .topnavbar .navbar-nav > .open > a:hover,
@@ -95,7 +95,7 @@ body,
 .sidebar .nav > li > .nav-item:focus,
 .sidebar .nav > li > a:hover,
 .sidebar .nav > li > .nav-item:hover {
-  color: #9289ca;
+  color: #7266ba;
 }
 .sidebar .nav > li > a > em,
 .sidebar .nav > li > .nav-item > em {
@@ -107,12 +107,12 @@ body,
 .sidebar .nav > li.open > a,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
-  background-color: #383d4e;
-  color: #9289ca;
+  background-color: #2F3444;
+  color: #fff;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #9289ca;
+  color: #fff;
 }
 .sidebar-subnav {
   background-color: #3a3f51;
@@ -128,16 +128,16 @@ body,
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #9289ca;
+  color: #7266ba;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #9289ca;
+  color: #7266ba;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #9289ca;
-  background-color: #9289ca;
+  border-color: #7266ba;
+  background-color: #7266ba;
 }
 /* ========================================================================
    Component: offsidebar
