--- a/app/css/theme-h.css
+++ b/app/css/theme-h.css
@@ -12,10 +12,7 @@ body,
   background-color: #fff;
 }
 .topnavbar .navbar-header {
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(left, #ec2121 0%, #f05050 100%);
-  background-image: -o-linear-gradient(left, #ec2121 0%, #f05050 100%);
-  background-image: linear-gradient(to right, #ec2121 0%, #f05050 100%);
+ background-color: #ff5177;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec2121', endColorstr='#fff05050', GradientType=1);
 }
@@ -46,19 +43,13 @@ body,
   color: #ffffff;
 }
 .topnavbar .nav-wrapper {
-  background-color: #ec2121;
-  background-image: -webkit-linear-gradient(left, #ec2121 0%, #f05050 100%);
-  background-image: -o-linear-gradient(left, #ec2121 0%, #f05050 100%);
-  background-image: linear-gradient(to right, #ec2121 0%, #f05050 100%);
+  background-color: #ff5177;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec2121', endColorstr='#fff05050', GradientType=1);
 }
 @media only screen and (min-width: 768px) {
   .topnavbar {
-    background-color: #ec2121;
-    background-image: -webkit-linear-gradient(left, #ec2121 0%, #f05050 100%);
-    background-image: -o-linear-gradient(left, #ec2121 0%, #f05050 100%);
-    background-image: linear-gradient(to right, #ec2121 0%, #f05050 100%);
+    background-color: #ff5177;
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec2121', endColorstr='#fff05050', GradientType=1);
   }
@@ -95,7 +86,7 @@ body,
 .sidebar .nav > li > .nav-item:focus,
 .sidebar .nav > li > a:hover,
 .sidebar .nav > li > .nav-item:hover {
-  color: #f05050;
+  color: #ff5177;
 }
 .sidebar .nav > li > a > em,
 .sidebar .nav > li > .nav-item > em {
@@ -108,11 +99,11 @@ body,
 .sidebar .nav > li.active .nav,
 .sidebar .nav > li.open .nav {
   background-color: #383d4e;
-  color: #f05050;
+  color: #ff5177;
 }
 .sidebar .nav > li.active > a > em,
 .sidebar .nav > li.open > a > em {
-  color: #f05050;
+  color: #ff5177;
 }
 .sidebar-subnav {
   background-color: #3a3f51;
@@ -128,16 +119,16 @@ body,
 .sidebar-subnav > li > .nav-item:focus,
 .sidebar-subnav > li > a:hover,
 .sidebar-subnav > li > .nav-item:hover {
-  color: #f05050;
+  color: #ff5177;
 }
 .sidebar-subnav > li.active > a,
 .sidebar-subnav > li.active > .nav-item {
-  color: #f05050;
+  color: #ff5177;
 }
 .sidebar-subnav > li.active > a:after,
 .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #f05050;
-  background-color: #f05050;
+  border-color: #ff5177;
+  background-color: #ff5177;
 }
 /* ========================================================================
    Component: offsidebar
