Added Material Design Icon Font

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -22,7 +22,7 @@
       <div class="panel widget bg-primary">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-primary-dark pv-lg">
-               <em class="icon-cloud-upload fa-3x"></em>
+               <i class="md-account-circle md-4x"></i>
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">1700</div>
@@ -36,7 +36,7 @@
       <div class="panel widget bg-purple">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-purple-dark pv-lg">
-               <em class="icon-globe fa-3x"></em>
+               <i class="md-alarm-on md-4x"></i>
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">700
@@ -52,7 +52,7 @@
       <div class="panel widget bg-green">
          <div class="row row-table">
             <div class="col-xs-4 text-center bg-green-dark pv-lg">
-               <em class="icon-bubbles fa-3x"></em>
+               <i class="md-wifi-tethering md-4x"></i>
             </div>
             <div class="col-xs-8 pv-lg">
                <div class="h2 mt0">500</div>
