New Off-Sidebar Icons

--- a/app/views/partials/top-navbar.html
+++ b/app/views/partials/top-navbar.html
@@ -44,23 +44,23 @@
       </ul>
       <!-- END Left navbar-->
       <!-- START Right Navbar-->
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">  
          <!-- Search icon-->
          <li>
             <a href="#" search-open="search-open">
-               <em class="icon-magnifier"></em>
+               <i class="md-search"></i>
             </a>
          </li>
          <!-- Fullscreen (only desktops)-->
          <li class="visible-lg">
             <a href="#" toggle-fullscreen="toggle-fullscreen">
-               <em class="fa fa-expand"></em>
+               <i class="md-fullscreen"></i> 
             </a>
          </li>
          <!-- START Alert menu-->
          <li class="dropdown dropdown-list">
             <a href="#" dropdown-animate="" class="dropdown-toggle">
-               <em class="icon-bell"></em>
+               <i class="md-notifications"></i>   
                <div class="label label-danger">11</div>
             </a>
             <!-- START Dropdown menu-->
@@ -72,7 +72,7 @@
                      <a href="#" class="list-group-item">
                         <div class="media">
                            <div class="pull-left">
-                              <em class="fa fa-twitter fa-2x text-info"></em>
+                               <i class="md-perm-identity md-2x text-info"></i>   
                            </div>
                            <div class="media-body clearfix">
                               <p class="m0">New followers</p>
@@ -86,7 +86,7 @@
                      <a href="#" class="list-group-item">
                         <div class="media">
                            <div class="pull-left">
-                              <em class="fa fa-envelope fa-2x text-warning"></em>
+                              <i class="md-email md-2x text-warning"></i>    
                            </div>
                            <div class="media-body clearfix">
                               <p class="m0">New e-mails</p>
@@ -100,7 +100,7 @@
                      <a href="#" class="list-group-item">
                         <div class="media">
                            <div class="pull-left">
-                              <em class="fa fa-tasks fa-2x text-success"></em>
+                              <i class="md-done-all md-2x text-success"></i>
                            </div>
                            <div class="media-body clearfix">
                               <p class="m0">Pending Tasks</p>
@@ -125,7 +125,7 @@
          <!-- START Contacts button-->
          <li>
             <a href="#" toggle-state="offsidebar-open" no-persist="no-persist">
-               <em class="icon-notebook"></em>
+               <i class="md-arrow-back"></i>     
             </a>
          </li>
          <!-- END Contacts menu-->
