--- a/app/views/partials/offsidebar.html
+++ b/app/views/partials/offsidebar.html
@@ -3,13 +3,13 @@
    <tabset justified="true">
       <tab>
          <tab-heading>
-            <em class="icon-equalizer fa-lg"></em>
+            <i class="md-settings md-2x"></i>   
          </tab-heading>
          <div ng-include="'app/views/partials/settings.html'"></div>
       </tab>
       <tab>
          <tab-heading>
-            <em class="icon-users fa-lg"></em>
+            <i class="md-account-child md-2x"></i>   
          </tab-heading>
          <div>
             <div ng-include="'app/views/partials/chat.html'"></div>
