--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,400italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,900,300,500);
 /*!
  * 
  * Sussurus - Bootstrap Admin App + AngularJS
@@ -2208,22 +2209,27 @@ select[multiple].form-group-lg .form-control {
 .btn {
   display: inline-block;
   margin-bottom: 0;
-  font-weight: normal;
+  font-weight: 700;
   text-align: center;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
   background-image: none;
   border: 1px solid transparent;
+  text-transform: uppercase;
   white-space: nowrap;
   padding: 6px 16px;
-  font-size: 14px;
+  font-size: 9px;
+  font-family: 'Roboto', sans-serif;        
   line-height: 1.52857143;
-  border-radius: 4px;
+  border-radius: 2px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+    -webkit-box-shadow: 0px 3px 10px -5px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 10px -5px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 10px -5px rgba(115, 110, 110, 0.75);
 }
 .btn:focus,
 .btn:active:focus,
@@ -2315,8 +2321,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #4b91ea;
-  border-color: #3483e7;
+  background-color: #5677fc;
+  border-color: #5677fc;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2350,8 +2356,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #27c24c;
-  border-color: #26be4a;
+  background-color: #259b24;
+  border-color: #259b24;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -2395,8 +2401,8 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #ffffff;
-  background-color: #23b7e5;
-  border-color: #1eb6e4;
+  background-color: #03a9f4;
+  border-color: #03a9f4;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2440,8 +2446,8 @@ fieldset[disabled] .btn-info.active {
 }
 .btn-warning {
   color: #ffffff;
-  background-color: #ff902b;
-  border-color: #ff8d26;
+  background-color: #ff5722;
+  border-color: #ff5722;
 }
 .btn-warning:hover,
 .btn-warning:focus,
@@ -2485,8 +2491,8 @@ fieldset[disabled] .btn-warning.active {
 }
 .btn-danger {
   color: #ffffff;
-  background-color: #f05050;
-  border-color: #f04b4b;
+  background-color: #e51c23;
+  border-color: #e51c23;
 }
 .btn-danger:hover,
 .btn-danger:focus,
@@ -5806,14 +5812,18 @@ now {
   padding: 0;
 }
 .btn {
-  border-radius: 3px;
-  font-size: 13px;
+  border-radius: 2px;
+  font-size: 10px;
   border-color: transparent;
   -webkit-appearance: none;
   outline: none !important;
   -webkit-transition: all 0.1s;
   -o-transition: all 0.1s;
   transition: all 0.1s;
+  font-weight: 500;
+   -webkit-box-shadow: 0px 3px 10px -5px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 10px -5px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 10px -5px rgba(115, 110, 110, 0.75);
 }
 .btn.btn-link {
   box-shadow: none;
@@ -6705,8 +6715,8 @@ body {
  ========================================================================== */
 .btn-inverse {
   color: #ffffff;
-  background-color: #131e26;
-  border-color: #131e26;
+  background-color: #607D8B;
+  border-color: #607D8B;
 }
 .btn-inverse:hover,
 .btn-inverse:focus,
@@ -6750,8 +6760,8 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-green {
   color: #ffffff;
-  background-color: #37bc9b;
-  border-color: transparent;
+  background-color: #8bc34a;
+  border-color: #8bc34a;
 }
 .btn-green:hover,
 .btn-green:focus,
@@ -6795,8 +6805,8 @@ fieldset[disabled] .btn-green.active {
 }
 .btn-purple {
   color: #ffffff;
-  background-color: #7266ba;
-  border-color: transparent;
+  background-color: #7c4dff;
+  border-color: #7c4dff;
 }
 .btn-purple:hover,
 .btn-purple:focus,
@@ -6840,8 +6850,8 @@ fieldset[disabled] .btn-purple.active {
 }
 .btn-pink {
   color: #ffffff;
-  background-color: #f532e5;
-  border-color: transparent;
+  background-color: #ff5177;
+  border-color: #ff5177;
 }
 .btn-pink:hover,
 .btn-pink:focus,
@@ -6850,8 +6860,8 @@ fieldset[disabled] .btn-purple.active {
 .btn-pink.active,
 .open > .dropdown-toggle.btn-pink {
   color: #ffffff;
-  background-color: #f41fe3;
-  border-color: rgba(0, 0, 0, 0);
+  background-color: #ff4081;
+  border-color: #ff4081;
 }
 .btn-pink:active,
 .btn-pink.active,
