--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -16,6 +16,76 @@
    <small>{{ 'dashboard.WELCOME' | translate:{ appName: app.name } }} !</small>
 </h3>
 <!-- START widgets box-->
+<div class="row ng-scope">
+   <div class="col-lg-3">
+      <!-- START widget-->
+      <div class="panel widget">
+         <div class="row row-table row-flush">
+            <div class="col-xs-4 bg-info text-center">
+               <em class="fa fa-users fa-2x"></em>
+            </div>
+            <div class="col-xs-8">
+               <div class="panel-body text-center">
+                  <h4 class="mt0">10k</h4>
+                  <p class="mb0 text-muted">VISITORS</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- END widget-->
+   </div>
+   <div class="col-lg-3">
+      <!-- START widget-->
+      <div class="panel widget">
+         <div class="row row-table row-flush">
+            <div class="col-xs-4 bg-danger text-center">
+               <em class="fa fa-music fa-2x"></em>
+            </div>
+            <div class="col-xs-8">
+               <div class="panel-body text-center">
+                  <h4 class="mt0">100%</h4>
+                  <p class="mb0 text-muted">VOLUME</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- END widget-->
+   </div>
+   <div class="col-lg-3">
+      <!-- START widget-->
+      <div class="panel widget">
+         <div class="row row-table row-flush">
+            <div class="col-xs-4 bg-inverse text-center">
+               <em class="fa fa-code-fork fa-2x"></em>
+            </div>
+            <div class="col-xs-8">
+               <div class="panel-body text-center">
+                  <h4 class="mt0">150</h4>
+                  <p class="mb0 text-muted">FORKS</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- END widget-->
+   </div>
+   <div class="col-lg-3">
+      <!-- START widget-->
+      <div class="panel widget">
+         <div class="row row-table row-flush">
+            <div class="col-xs-4 bg-green text-center">
+               <em class="fa fa-inbox fa-2x"></em>
+            </div>
+            <div class="col-xs-8">
+               <div class="panel-body text-center">
+                  <h4 class="mt0">10</h4>
+                  <p class="mb0 text-muted">NEW MESSAGES</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- END widget-->
+   </div>
+</div>
 <div class="row">
    <div class="col-lg-3 col-sm-6">
       <!-- START widget-->
