--- a/app/views/mailbox.html
+++ b/app/views/mailbox.html
@@ -21,8 +21,9 @@
                      </li>
                      <li ui-sref-active="active">
                         <a ui-sref="app.mailbox.inbox">
+                            <i class="md-inbox md-2x"></i>
                            <span class="label label-primary pull-right">42</span>
-                           <em class="fa fa-inbox fa-fw fa-lg"></em>
+                           
                            <span>Inbox</span>
                         </a>
                      </li>
