--- a/app/css/app.css
+++ b/app/css/app.css
@@ -3212,7 +3212,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: left;
 }
 .nav-pills > li > a {
-  border-radius: 4px;
+  border-radius: 2px;
 }
 .nav-pills > li + li {
   margin-left: 2px;
@@ -6550,7 +6550,7 @@ body {
 .sidebar {
   height: 100%;
   padding-bottom: 20px;
-  background-color: #ffffff;
+  background-color: #3a3f51;
   margin-right: -17px;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -6589,9 +6589,10 @@ body {
 .sidebar > .nav > li > a,
 .sidebar > .nav > li > .nav-item {
   padding: 12px 24px;
-  color: #515253;
+  color: #fff;
   letter-spacing: .025em;
   font-weight: normal;
+  font-size: 12.5px;
 }
 .sidebar > .nav > li > a:focus,
 .sidebar > .nav > li > .nav-item:focus,
@@ -6617,7 +6618,7 @@ body {
 .sidebar > .nav > li.open > a,
 .sidebar > .nav > li.active .nav,
 .sidebar > .nav > li.open .nav {
-  background-color: #fcfcfc;
+  background-color: #2F3444;
   color: #5677fc;
 }
 .sidebar > .nav > li.active > a > em,
@@ -6632,7 +6633,7 @@ body {
   margin-right: 20px;
 }
 .sidebar-subnav {
-  background-color: #ffffff;
+  background-color: #3a3f51;
 }
 .sidebar-subnav > .sidebar-subnav-header {
   color: #515253;
@@ -6651,7 +6652,7 @@ body {
   padding-left: 53px;
   font-weight: normal;
   background-color: transparent !important;
-  color: #515253;
+  color: #fff;
 }
 .sidebar-subnav > li > a:focus,
 .sidebar-subnav > li > .nav-item:focus,
