--- a/app/css/app.css
+++ b/app/css/app.css
@@ -14599,7 +14599,7 @@ body .jvectormap-zoomout {
   margin-right: 30px !important;
 }
 .mt-xl {
-  margin-top: 30px !important;
+  margin-top: 15% !important;
 }
 .mb-xl {
   margin-bottom: 30px !important;
